# personal-knowledge-agent

./: .gitignore  README.md  pka.yaml  pyproject.toml
data/notes/: go_strategy.md  minecraft_survival.md  open_world_game_design.md  rag_agent_design.md  roguelike_game_design.md
docs/: DATA_SOURCES.md
scripts/: download_hf_sample_data.py  download_sample_data.py
src/pka/: bm25.py  chunking.py  cli.py  config.py  embeddings.py  graphs.py  index_manifest.py  llm.py  loaders.py  query.py  rag.py  rerank.py  vector_store.py
