[project]
name = "personal-knowledge-agent"
version = "0.1.0"
description = "Local-first personal knowledge RAG agent with DeepSeek as the default LLM."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4",
  "chromadb",
  "jieba",
  "langgraph",
  "openai",
  "pillow",
  "pymupdf",
  "pypdf",
  "pytesseract",
  "python-dotenv",
  "pyyaml",
  "rank-bm25",
  "readability-lxml",
  "requests",
  "sentence-transformers",
  "socksio",
]

[project.scripts]
pka = "pka.cli:main"

[build-system]
requires = ["setuptools>=74"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
